Finalizing the application modules